# transparentegov

./: .gitignore  OFFICIAL_DATA_EXPANSION_PLAN.md  OSINT_PUBLIC_INTELLIGENCE_PLATFORM_SPEC.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260316_0001_initial_osint_schema.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py  routes_admin.py  routes_analysis.py  routes_collectors.py  routes_entities.py  routes_health.py  routes_investigations.py  routes_politicians.py  routes_reports.py  routes_territory.py
backend/app/collectors/: base.py  base_dos_dados.py  camara.py  common.py  ibge.py  pncp.py  portal_transparencia.py  registry.py  senado.py  tse.py
backend/app/core/: config.py  security.py
backend/app/db/: base_model.py  seed.py  session.py
backend/app/models/: __init__.py  core.py
backend/app/ops/: bootstrap.py
backend/app/schemas/: api.py
backend/app/services/: audit.py  collectors.py  investigations.py  politicians.py  providers.py  reports.py  territory.py
backend/app/tasks/: worker.py
backend/scripts/: bootstrap_full.ps1  validate_vercel_proxy.ps1
backend/tests/: test_health.py  test_territory.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  types.ts
infra/: docker-compose.yml
(+23 files in other folders)
