[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transparentegov-backend"
version = "1.0.0"
description = "OSINT public intelligence backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.41",
  "psycopg[binary]>=3.2.9",
  "alembic>=1.16.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.1",
  "cryptography>=45.0.0",
  "python-multipart>=0.0.20",
  "redis>=6.2.0",
  "celery>=5.5.0",
  "reportlab>=4.4.0",
  "orjson>=3.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]

